Change title banner title link and fix styling on mobile

--- a/wp-content/themes/multunus/sass/custom/_landing_banner.scss
+++ b/wp-content/themes/multunus/sass/custom/_landing_banner.scss
@@ -65,7 +65,7 @@
             margin-top: 12.0%;
 
             @media (max-width: $screen-xs) {
-                margin-top: 28%;
+                margin-top: 20%;
             }
             @media(min-width: 1406px) and (max-width: 1766px){
                 margin-top: 10%;
@@ -77,7 +77,7 @@
                 margin-top: 10%;
             }
             .btn-green{
-                margin-top: 40px;
+                margin-top: 20px;
                 @media (min-width: $screen-xs) {
                     margin-top: 40px;
                 }
@@ -165,7 +165,7 @@
             text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
 
             @media (max-width: $screen-xs-max){
-                margin-bottom: 40px;
+                margin-bottom: 20px;
             }
             @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max){
                 margin-top: 16px;
